--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "export": "next export"
   },
   "dependencies": {
     "gray-matter": "^4.0.3",
+    "mongodb": "^4.1.3",
     "next": "10.0.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
